--- a/index5.html
+++ b/index5.html
@@ -66,7 +66,7 @@
                                     <li><a class="dropdown-item" href="#">Accessibility</a></li>
                                     <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="index.html" style="color: red;">Log-off</a></li>
+                                    <li><a class="dropdown-item" href="index2.html" style="color: blue;">Log-in</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -90,7 +90,7 @@
             <div class="tab-pane fade show active" id="tresxfila" role="tabpanel" aria-labelledby="home-tab">
                 <div class="container-fluid my-1">
                     <div class="row">
-                        <div class="col-sm-4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple111/v4/16/4b/7a/164b7a5a-57a1-48b0-5e84-08cfa9b3458a/source/512x512bb.jpg" class="img-fluid" style="width: 100%;"/></div>
+                        <div class="col-sm-4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple111/v4/16/4b/7a/164b7a5a-57a1-48b0-5e84-08cfa9b3458a/source/512x512bb.jpg" class="img-fluid img-thumbnail" style="width: 100%;"/></div>
                         <div class="col-sm-4"><img src="https://i.pinimg.com/474x/f9/c9/c2/f9c9c2c4fb76f5364ce656b98b31c140.jpg" class="img-fluid img-thumbnail" style="height: 100%;"/></div>
                         <div class="col-sm-4"><img src="https://m.media-amazon.com/images/I/81NWAUtahfL.jpg"class="img-fluid img-thumbnail" style="height: 100%;"/></div>
                     </div>
@@ -100,7 +100,7 @@
                         <div class="col-sm-4"><img src="https://play-lh.googleusercontent.com/bvvOS7w2zSmbnhv38Asxyp6dhpysoREOBGf9JEWunwpxs2SpNzG_bOC5SDdiLB0-JfZh"class="img-fluid img-thumbnail" style="height: 100%;"/></div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4"><img src="https://w0.peakpx.com/wallpaper/743/676/HD-wallpaper-heavy-metal-black-death-guitare-heavy-metal-music-power-trash.jpg"class="img-fluid img-thumbnail" style="height: 100%;"/></div>
+                        <div class="col-sm-4"><img src="https://w0.peakpx.com/wallpaper/743/676/HD-wallpaper-heavy-metal-black-death-guitare-heavy-metal-music-power-trash.jpg"class="img-fluid img-thumbnail"/></div>
                         <div class="col-sm-4"><img src="https://rare-gallery.com/uploads/posts/527739-heavy-metal.jpg"class="img-fluid img-thumbnail" style="height: 100%;"/></div>
                         <div class="col-sm-4"><img src="https://wallpapercave.com/wp/wp2658255.jpg"class="img-fluid img-thumbnail" style="height: 100%;"/></div>
                     </div>
@@ -116,7 +116,7 @@
                                     <span>12/14</span>
                                 </div>
                                 <div>
-                                    <img src="https://is2-ssl.mzstatic.com/image/thumb/Purple111/v4/16/4b/7a/164b7a5a-57a1-48b0-5e84-08cfa9b3458a/source/512x512bb.jpg"></img>
+                                    <img src="https://is2-ssl.mzstatic.com/image/thumb/Purple111/v4/16/4b/7a/164b7a5a-57a1-48b0-5e84-08cfa9b3458a/source/512x512bb.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>2.048 Likes</strong></p>
@@ -129,7 +129,7 @@
                                     <span>12/16</span>
                                 </div>
                                 <div>
-                                    <img src="https://i.pinimg.com/474x/f9/c9/c2/f9c9c2c4fb76f5364ce656b98b31c140.jpg"></img>
+                                    <img src="https://i.pinimg.com/474x/f9/c9/c2/f9c9c2c4fb76f5364ce656b98b31c140.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>4.521 Likes</strong></p>
@@ -142,7 +142,7 @@
                                     <span>12/18</span>
                                 </div>
                                 <div>
-                                    <img src="https://m.media-amazon.com/images/I/81NWAUtahfL.jpg"></img>
+                                    <img src="https://m.media-amazon.com/images/I/81NWAUtahfL.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>948 Likes</strong></p>
@@ -155,7 +155,7 @@
                                     <span>12/20</span>
                                 </div>
                                 <div>
-                                    <img src="https://wallpapercave.com/wp/4JtszxG.jpg"></img>
+                                    <img src="https://wallpapercave.com/wp/4JtszxG.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>2.560 Likes</strong></p>
@@ -168,7 +168,7 @@
                                     <span>12/22</span>
                                 </div>
                                 <div>
-                                    <img src="https://i.pinimg.com/originals/e0/ab/17/e0ab177a054b5d16bd5bcd3a7fd7b212.jpg"></img>
+                                    <img src="https://i.pinimg.com/originals/e0/ab/17/e0ab177a054b5d16bd5bcd3a7fd7b212.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>1.659 Likes</strong></p>
@@ -181,7 +181,7 @@
                                     <span>12/24</span>
                                 </div>
                                 <div>
-                                    <img src="https://play-lh.googleusercontent.com/bvvOS7w2zSmbnhv38Asxyp6dhpysoREOBGf9JEWunwpxs2SpNzG_bOC5SDdiLB0-JfZh"></img>
+                                    <img src="https://play-lh.googleusercontent.com/bvvOS7w2zSmbnhv38Asxyp6dhpysoREOBGf9JEWunwpxs2SpNzG_bOC5SDdiLB0-JfZh" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>268 Likes</strong></p>
@@ -194,7 +194,7 @@
                                     <span>12/26</span>
                                 </div>
                                 <div>
-                                    <img src="https://w0.peakpx.com/wallpaper/743/676/HD-wallpaper-heavy-metal-black-death-guitare-heavy-metal-music-power-trash.jpg"></img>
+                                    <img src="https://w0.peakpx.com/wallpaper/743/676/HD-wallpaper-heavy-metal-black-death-guitare-heavy-metal-music-power-trash.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>2.023 Likes</strong></p>
@@ -207,7 +207,7 @@
                                     <span>12/28</span>
                                 </div>
                                 <div>
-                                    <img src="https://rare-gallery.com/uploads/posts/527739-heavy-metal.jpg"></img>
+                                    <img src="https://rare-gallery.com/uploads/posts/527739-heavy-metal.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>1.986 Likes</strong></p>
@@ -220,7 +220,7 @@
                                     <span>12/30</span>
                                 </div>
                                 <div>
-                                    <img src="https://wallpapercave.com/wp/wp2658255.jpg"></img>
+                                    <img src="https://wallpapercave.com/wp/wp2658255.jpg" class="img-fluid"></img>
                                 </div>
                                 <div>
                                     <p><strong>1.978 Likes</strong></p>
