--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="modal-footer" style="background-color: rgb(240, 240, 240)">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send</button>
+                        <input type="submit" class="btn btn-primary" value="Send">
                     </div>
                 </div>
             </div>
